<resources>
    <string name="app_name">Loplop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_siapa_saya">Siapa saya</string>
    <string name="label_nama_saya">Nama saya ...</string>
    <string name="label_saya_lahir">Saya lahir ...</string>
    <string name="label_btn_lanjutkan">Lanjutkan</string>
    <string name="label_btn_lanjutkan_limit">Lanjutkan(%s/%s)</string>
    <string name="label_saya">Saya ...</string>
    <string name="label_pria">Pria</string>
    <string name="label_wanita">Wanita</string>
    <string name="label_tertarik">Saya tertarik ...</string>
    <string name="label_min_photo">Masukan minimal 2 foto untuk melanjutkan</string>
    <string name="label_hobby">biarkan orang tahu informasi dan hal apa yang anda sukai dengan menambahkannya ke profil Anda</string>
    <string name="label_min_age">Anda harus berusia diatas 18 tahun.</string>
    <string name="label_name_not_empty">Nama anda tidak boleh kosong.</string>
    <string name="label_born_date_not_empty">Tanggal lahir anda tidak boleh kosong.</string>
    <string name="label_male">male</string>
    <string name="label_female">female</string>
    <string name="label_camera">Kamera</string>
    <string name="label_gallery">Galeri</string>
    <string name="label_unggah_foto_terbaik_anda">Unggah foto terbaik anda.</string>
    <string name="label_chat">Chat</string>
    <string name="label_name_age">%s, %sth</string>
</resources>