<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@drawable/bs_background">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/label_unggah_foto_terbaik_anda"
        style="@style/White16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txv_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_marginEnd="32dp"
        android:drawableTop="@drawable/ic_gallery"
        android:drawablePadding="@dimen/dimen_3dp"
        android:padding="@dimen/dimen_3dp"
        android:gravity="center"
        style="@style/White14"
        android:text="@string/label_gallery"
        app:layout_constraintEnd_toStartOf="@+id/txv_camera"
        app:layout_constraintStart_toStartOf="@+id/txv_title"
        app:layout_constraintTop_toBottomOf="@+id/txv_title" />

    <TextView
        android:id="@+id/txv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:padding="@dimen/dimen_3dp"
        android:drawableTop="@drawable/ic_camera"
        android:drawablePadding="@dimen/dimen_3dp"
        android:gravity="center"
        style="@style/White14"
        android:text="@string/label_camera"
        app:layout_constraintBottom_toBottomOf="@+id/txv_gallery"
        app:layout_constraintStart_toEndOf="@+id/txv_gallery"
        app:layout_constraintTop_toTopOf="@+id/txv_gallery" />

</androidx.constraintlayout.widget.ConstraintLayout>