<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.inputData.name.NameFragment">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/progress_one"
            android:layout_width="80dp"
            android:layout_height="5dp"
            android:background="@drawable/bg_rounded_10dp_9a"
            android:layout_marginEnd="@dimen/dimen_8dp"
            app:layout_constraintEnd_toStartOf="@+id/progress_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/progress_two"
            android:layout_width="80dp"
            android:layout_height="5dp"
            android:background="@drawable/bg_rounded_10dp_white"
            android:layout_marginEnd="@dimen/dimen_8dp"
            app:layout_constraintStart_toEndOf="@+id/progress_one"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/progress_three"
            android:layout_width="80dp"
            android:layout_height="5dp"
            android:background="@drawable/bg_rounded_10dp_white"
            android:layout_marginEnd="@dimen/dimen_8dp"
            app:layout_constraintEnd_toStartOf="@+id/progress_four"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/progress_four"
            android:layout_width="80dp"
            android:layout_height="5dp"
            android:background="@drawable/bg_rounded_10dp_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txv_who_i_am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_siapa_saya"
        style="@style/WhiteBold30"
        android:layout_marginTop="@dimen/dimen_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_nama_saya"
        style="@style/White20"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_36dp"
        android:layout_marginEnd="@dimen/dimen_36dp"
        app:layout_constraintTop_toBottomOf="@+id/txv_who_i_am"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="@+id/txv_name"
        app:layout_constraintTop_toBottomOf="@+id/txv_name"
        app:layout_constraintEnd_toEndOf="@+id/txv_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_8dp_white"
            android:textColor="@color/black"
            style="@style/InputSingleLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txv_tgl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_saya_lahir"
        style="@style/White20"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginStart="@dimen/dimen_36dp"
        android:layout_marginEnd="@dimen/dimen_36dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_layout_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_tgl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="@+id/txv_tgl"
        app:layout_constraintTop_toBottomOf="@+id/txv_tgl"
        app:layout_constraintEnd_toEndOf="@+id/txv_tgl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_tgl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_8dp_white"
            android:focusable="false"
            android:textColor="@color/black"
            style="@style/InputSingleLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/include"
        layout="@layout/button_next" />

</androidx.constraintlayout.widget.ConstraintLayout>